@@ -1,5 +1,10 @@
 2013-07-20  Christopher Faylor  <me.cygwin2013@cgf.cx>
 
+	* exceptions.cc (signal_exit): Remove comment.  Use
+	__builtin_frame_address.
+
+2013-07-20  Christopher Faylor  <me.cygwin2013@cgf.cx>
+
 	* exceptions.cc (signal_exit): Nope.  Nevermind.  Dump core
 	unconditionally.
 
